2013-01-30  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Remove QT4_UNICODE related code paths
        https://bugs.webkit.org/show_bug.cgi?id=108316

        Reviewed by Kenneth Rohde Christiansen.

        Get rid of QT4_UNICODE and any related code paths. The Qt port
        requires Qt5 and ICU these days.

        * WTF.gypi:
        * WTF.pro:
        * wtf/unicode/Unicode.h:
        * wtf/unicode/qt4/UnicodeQt4.h: Removed.

2013-01-29  Mark Lam  <mark.lam@apple.com>

        Introducing WTF::TypeSafeEnum and DatabaseError.
        https://bugs.webkit.org/show_bug.cgi?id=108279.

        Reviewed by Geoffrey Garen.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/TypeSafeEnum.h: Added.
        (WTF):
        (TypeSafeEnum):
        (WTF::TypeSafeEnum::TypeSafeEnum):
        (WTF::TypeSafeEnum::value):
        (WTF::TypeSafeEnum::operator==):
        (WTF::TypeSafeEnum::operator!=):
        (WTF::TypeSafeEnum::operator<):
        (WTF::TypeSafeEnum::operator<=):
        (WTF::TypeSafeEnum::operator>):
        (WTF::TypeSafeEnum::operator>=):

2013-01-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r140983.
        http://trac.webkit.org/changeset/140983
        https://bugs.webkit.org/show_bug.cgi?id=108277

        Unfortunately, this API has one last client (Requested by
        abarth on #webkit).

        * wtf/Platform.h:

2013-01-28  Benjamin Poulain  <benjamin@webkit.org>

        String constructed from Literals should be non-empty
        https://bugs.webkit.org/show_bug.cgi?id=108103

        Reviewed by Eric Carlson.

        For efficiency, the construction from literal only works with valid non-empty strings.
        One of the constructor was changed to fix an error from HTMLMediaElement.

        This patch replaces the branch with an assertions.

        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::createFromLiteral):

2013-01-28  David Kilzer  <ddkilzer@apple.com>
