@@ -1,3 +1,14 @@
+2013-01-30  Zeno Albisser  <zeno@webkit.org>
+
+        [Qt] Fix Qt/Mac build after r141024 and r141037
+        https://bugs.webkit.org/show_bug.cgi?id=108318
+
+        Reviewed by Kentaro Hara.
+
+        * Platform/CoreIPC/mac/ConnectionMac.cpp:
+        (CoreIPC::Connection::platformInvalidate):
+            Replace nullptr with 0 to allow compiling without C++11 support.
+
 2013-01-30  Kondapally Kalyan  <kalyan.kondapally@intel.com>
 
         [EFL][Qt][WebGL] Avoid deleting an uncreated canvas.
